fix h3 font issue with span, add collapsed property to first-level menu items

--- a/src/theme/_project-variables.scss
+++ b/src/theme/_project-variables.scss
@@ -1589,11 +1589,6 @@ span.ttDel {
   display: none;
 }
 
-h3.tei.title.left>p,
-span {
-  font-variant: normal !important;
-}
-
 .tei p.note {
   padding-left: 0px !important;
   text-indent: 0px !important;
